--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -122,48 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "lightweight-relay",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'female'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gender"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "acting-nicaragua",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'51'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "age"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "id": "former-operation",
    "metadata": {},
@@ -173,14 +131,6 @@
     "    if mask == m and gender == g and age == a:\n",
     "        target = i"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "special-creek",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -762,28 +712,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "funny-cooper",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-5f1dfb2f0744>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "len(name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "opposed-pride",
    "metadata": {},
@@ -860,16 +788,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tough-mortality",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.img[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "double-reform",
    "metadata": {
     "tags": []
@@ -877,26 +795,6 @@
    "outputs": [],
    "source": [
     "combination = [(m, g, a) for m in ['m', 'i', 'n'] for g in ['male', 'female'] for a in [0, 1, 2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "interested-prisoner",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combination"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "million-guide",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.Mask[1]"
    ]
   },
   {
@@ -945,16 +843,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "applied-asthma",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "agricultural-implement",
    "metadata": {},
    "outputs": [],
@@ -979,14 +867,6 @@
     "    ax = plt.subplot(5, 4, idx)\n",
     "    ax.set_title(df.Mask[rand] + '/' + df.gender[rand] + '/' + str(df.age[rand]))\n",
     "    plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "popular-pottery",
-   "metadata": {},
-   "source": [
-    "# 예시 코드"
    ]
   },
   {
@@ -1046,16 +926,6 @@
    "outputs": [],
    "source": [
     "def get_ext(img_dir, img_id):\n",
-    "    \"\"\"\n",
-    "    학습 데이터셋 이미지 폴더에는 여러 하위폴더로 구성되고, 이 하위폴더들에는 각 사람의 사진들이 들어가있습니다. 하위폴더에 속한 이미지의 확장자를 구하는 함수입니다.\n",
-    "    \n",
-    "    Args:\n",
-    "        img_dir: 학습 데이터셋 이미지 폴더 경로 \n",
-    "        img_id: 학습 데이터셋 하위폴더 이름\n",
-    "\n",
-    "    Returns:\n",
-    "        ext: 이미지의 확장자\n",
-    "    \"\"\"\n",
     "    filename = os.listdir(os.path.join(img_dir, img_id))[0]\n",
     "    ext = os.path.splitext(filename)[-1].lower()\n",
     "    return ext"
@@ -1069,16 +939,6 @@
    "outputs": [],
    "source": [
     "def get_img_stats(img_dir, img_ids):\n",
-    "    \"\"\"\n",
-    "    데이터셋에 있는 이미지들의 크기와 RGB 평균 및 표준편차를 수집하는 함수입니다.\n",
-    "    \n",
-    "    Args:\n",
-    "        img_dir: 학습 데이터셋 이미지 폴더 경로 \n",
-    "        img_ids: 학습 데이터셋 하위폴더 이름들\n",
-    "\n",
-    "    Returns:\n",
-    "        img_info: 이미지들의 정보 (크기, 평균, 표준편차)\n",
-    "    \"\"\"\n",
     "    img_info = dict(heights=[], widths=[], means=[], stds=[])\n",
     "    for img_id in tqdm(img_ids):\n",
     "        for path in glob(os.path.join(img_dir, img_id, '*')):\n",
@@ -1243,13 +1103,6 @@
    "outputs": [],
    "source": [
     "def plot_raw_images(img_dir, img_id):\n",
-    "    \"\"\"\n",
-    "    마스크 미착용 이미지를 시각화하는 함수입니다.\n",
-    "    \n",
-    "    Args:\n",
-    "        img_dir: 학습 데이터셋 이미지 폴더 경로 \n",
-    "        img_id: 학습 데이터셋 하위폴더 이름\n",
-    "    \"\"\"\n",
     "    ext = get_ext(img_dir, img_id)\n",
     "    img = np.array(Image.open(os.path.join(img_dir, img_id, 'normal' + ext)))\n",
     "    \n",
@@ -1275,13 +1128,6 @@
    "outputs": [],
    "source": [
     "def plot_mask_images(img_dir, img_id):\n",
-    "    \"\"\"\n",
-    "    마스크 정상착용 5장과 이상하게 착용한 1장을 2x3의 격자에 시각화하는 함수입니다.\n",
-    "    \n",
-    "    Args:\n",
-    "        img_dir: 학습 데이터셋 이미지 폴더 경로 \n",
-    "        img_id: 학습 데이터셋 하위폴더 이름\n",
-    "    \"\"\"\n",
     "    ext = get_ext(img_dir, img_id)\n",
     "    imgs = [np.array(Image.open(os.path.join(img_dir, img_id, class_name + ext))) for class_name in num2class[:-1]]\n",
     "    \n",
@@ -1301,20 +1147,6 @@
    "outputs": [],
    "source": [
     "plot_mask_images(cfg.img_dir, img_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "indirect-characteristic",
-   "metadata": {},
-   "source": [
-    "### 3. (Optional) Extra Analysis\n",
-    "\n",
-    "파트 3에서는 조금 특수한 분석을 해봅시다. 이 부분은 강의 내용을 벗어나는 코드가 포함되어 있으므로 생략하셔도 괜찮습니다. ### 3.1 Face Detection\n",
-    "사람 얼굴을 찾는데 딥러닝이 사용되기 이전에, Haar Cascade라는 방법이 많이 사용되었습니다. 이 방법을 이용하여 간단하게 결과를 시각화 해봅시다.\n",
-    "코드가 제대로 실행이 되지않는다면, opencv에서 제공하는 haarcascade_frontalface_default.xml파일을 현재 경로에 받아야합니다.\n",
-    "\n",
-    "(https://github.com/opencv/opencv/blob/master/data/haarcascades/haarcascade_frontalface_default.xml)"
    ]
   },
   {
@@ -1397,10 +1229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3.2 PCA\n",
-    "# 주성분 분석은 이미지 데이터 분포의 주성분을 구하는 방법입니다.\n",
-    "# 300 장의 얼굴 이미지에 대한 주성분 벡터(eigenface)를 구하고 T-SNE를 통해 차원축소를 하여\n",
-    "# 각 클래스마다의 분포차이를 시각화해봅시다."
+    "# PCA"
    ]
   },
   {
@@ -1549,14 +1378,6 @@
     "    alpha=0.8\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "selective-rapid",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
